k8s/11-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-v2
  namespace: aceest
  labels:
    app: aceest
    version: v2
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: aceest
      version: v2
  template:
    metadata:
      labels:
        app: aceest
        version: v2
    spec:
      containers:
        - name: app
          image: hbisht1210/aceest-fitness:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
