k8s/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest
  namespace: aceest
  labels:
    app: aceest
spec:
  type: NodePort
  selector:
    app: aceest
  ports:
    - name: http
      port: 80
      targetPort: 5000
      nodePort: 30080
