k8s/21-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-blue
  namespace: aceest
  labels:
    app: aceest
    color: blue
spec:
  type: ClusterIP
  selector:
    app: aceest
    version: v1
  ports:
    - name: http
      port: 80
      targetPort: 5000
