k8s/22-service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-green
  namespace: aceest
  labels:
    app: aceest
    color: green
spec:
  type: ClusterIP
  selector:
    app: aceest
    version: v2
  ports:
    - name: http
      port: 80
      targetPort: 5000
